--- a/ProyectosPrueba/ProyectoPrueba1/app/src/main/res/values/strings.xml
+++ b/ProyectosPrueba/ProyectoPrueba1/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">ProyectoPrueba1QueHago</string>
+    <string name="app_name">¿QUE HAGO HOY?</string>
 </resources>
